--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,53 +1,102 @@
 body {
-      font-family: Arial, sans-serif;
+      font-family: Verdana, sans-serif;
       margin: 30px;
-      background: #f8f9fa;
+      background-image: url(../assets/index.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
+      background-size: cover;      
     }
-    h1 {
+h1 {
       text-align: center;
-    }
-    form {
-      max-width: 700px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 15px;
-    }
-    input[type="text"], input[type="number"], textarea, select {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    .inline {
-      display: flex;
-      gap: 10px;
-    }
-    .inline > div {
-      flex: 1;
-    }
-    .section {
-      margin-top: 20px;
-      padding-top: 10px;
-      border-top: 1px solid #ddd;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #28a745;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #218838;
-    }
+}
+p, ul, ol {
+  font-size: 14px;
+}
+form {
+  font-size: 12px;
+  width: 50%;
+}
+input[type="text"], input[type="number"], textarea, select {
+  display: block;
+  width: 90%;
+  padding: 8px;
+  margin-top: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+/* index html styles */
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  background-color: rgb(217, 232, 245);
+}
+.button-index {
+  margin: 20px;
+  padding: 10px 20px 10px 20px;
+  font-size: 16px;
+  background: #28a745;
+  color: white;
+  border: 2px solid #218838;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.button-index:hover {
+  background: #218838;
+  border: 2px solid #28a745;
+}
+
+/* recipe html styles */
+.recipe-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: aliceblue;
+  border: 1px solid black;
+  border-radius: 12px;
+  padding: 10px;
+  margin: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  max-width:50%;
+  font-size: 12px;
+}
+.recipe-button-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+  border: 1px solid black;
+  border-radius: 12px;
+  padding: 10px;
+  margin: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  width:50%;
+}
+.button-recipe {
+  margin: 20px;
+  padding: 10px 20px 10px 20px;
+  font-size: 12px;
+  color: #2835a7;
+  background: #4fdbdb;
+  border: 2px solid #2835a7;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.button-recipe:hover {
+  background: #2835a7;
+  border: 2px solid #4fdbdb;
+  color: aliceblue;
+}
+/* update styles */
+.select-recipe-dropdown {
+  font-size: 12px;
+  width: 50%;
+}
+    
